--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.0",
-    "@types/node": "^18.16.16",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "@vitejs/plugin-react-swc": "^3.3.1",
+    "@rushstack/eslint-patch": "^1.3.2",
+    "@types/node": "^18.16.18",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "confusing-browser-globals": "^1.0.11",
-    "eslint": "^8.41.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -33,7 +33,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^2.8.8",
     "rollup-plugin-bundle-analyzer": "^1.6.6",
-    "typescript": "^5.0.4",
+    "typescript": "5.0.4",
     "vite": "^4.3.9"
   }
 }
