--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:analyze": "tsc && cross-env ANALYZE=true vite build",
     "lint": "eslint --ext ts,tsx --report-unused-disable-directives src/",
     "lint:fix": "eslint --fix --ext ts,tsx --report-unused-disable-directives src/",
     "preview": "vite preview"
@@ -22,6 +23,7 @@
     "@typescript-eslint/parser": "^6.9.1",
     "@vitejs/plugin-react-swc": "^3.4.1",
     "confusing-browser-globals": "^1.0.11",
+    "cross-env": "^7.0.3",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
