--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "react-vite-ts",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "build:analyze": "tsc && cross-env ANALYZE=true vite build",
     "lint": "eslint --ext ts,tsx --report-unused-disable-directives src/",
     "lint:fix": "eslint --fix --ext ts,tsx --report-unused-disable-directives src/",
     "preview": "vite preview"
@@ -15,16 +15,15 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.5.1",
-    "@types/node": "^18.18.9",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@vitejs/plugin-react-swc": "^3.4.1",
+    "@rushstack/eslint-patch": "^1.6.0",
+    "@types/node": "^18.18.12",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "confusing-browser-globals": "^1.0.11",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.53.0",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -32,9 +31,9 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^3.0.3",
-    "rollup-plugin-bundle-analyzer": "^1.6.6",
+    "prettier": "^3.1.0",
+    "rollup-plugin-visualizer": "^5.9.2",
     "typescript": "5.2.2",
-    "vite": "^4.5.0"
+    "vite": "^5.0.2"
   }
 }
