--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint --ext ts,tsx --report-unused-disable-directives src/",
-    "lint:fix": "eslint --fix --ext ts,tsx --report-unused-disable-directives src/",
+    "lint": "eslint --ext ts,tsx,js --report-unused-disable-directives src/",
+    "lint:fix": "eslint --fix --ext ts,tsx,js --report-unused-disable-directives src/",
     "preview": "vite preview"
   },
   "dependencies": {
