--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -15,12 +18,12 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.10.1",
-    "@types/node": "^18.19.28",
-    "@types/react": "^18.2.73",
-    "@types/react-dom": "^18.2.23",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
+    "@rushstack/eslint-patch": "^1.10.2",
+    "@types/node": "^18.19.31",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "confusing-browser-globals": "^1.0.11",
     "eslint": "^8.57.0",
@@ -30,9 +33,9 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "prettier": "^3.2.5",
-    "typescript": "5.4.3",
-    "vite": "^5.2.7"
+    "typescript": "5.4.5",
+    "vite": "^5.2.10"
   }
 }
