--- a/package.json
+++ b/package.json
@@ -19,23 +19,21 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
     "@types/node": "^18.19.46",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "prettier": "^3.3.3",
     "rollup-plugin-visualizer": "^5.12.0",
-    "typescript": "5.5.3",
-    "typescript-eslint": "^7.18.0",
+    "typescript": "5.5.4",
+    "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   }
 }
