--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^18.19.64",
+    "@eslint/js": "^9.15.0",
+    "@types/node": "^18.19.67",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react-swc": "^3.7.1",
+    "@vitejs/plugin-react-swc": "^3.7.2",
     "cross-env": "^7.0.3",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
@@ -30,10 +31,11 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "prettier": "^3.3.3",
+    "globals": "^15.12.0",
+    "prettier": "^3.4.1",
     "rollup-plugin-visualizer": "^5.12.0",
-    "typescript": "5.6.3",
-    "typescript-eslint": "^8.15.0",
-    "vite": "^5.4.11"
+    "typescript": "5.7.2",
+    "typescript-eslint": "^8.16.0",
+    "vite": "^6.0.1"
   }
 }
