--- a/package.json
+++ b/package.json
@@ -21,21 +21,21 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/node": "^18.19.67",
-    "@types/react": "^18.3.12",
+    "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "cross-env": "^7.0.3",
-    "eslint": "^9.15.0",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "globals": "^15.12.0",
-    "prettier": "^3.4.1",
-    "rollup-plugin-visualizer": "^5.12.0",
+    "globals": "^15.13.0",
+    "prettier": "^3.4.2",
+    "sonda": "^0.6.1",
     "typescript": "5.7.2",
-    "typescript-eslint": "^8.16.0",
-    "vite": "^6.0.1"
+    "typescript-eslint": "^8.17.0",
+    "vite": "^6.0.2"
   }
 }
